--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -93,6 +93,38 @@
             <p class="text-description">-កាហ្វេ វប្បធម៌ <br> - Angkor Balloon <br> -ប្រាសាទអង្គរវត្ត <br> -ប្រាសាទបាគង <br> -រមនីយ៍ដ្ឋានជាច្រើន <br> -និងប្រាសាទជាច្រើន... ។ </p>
             <p class="text-title-readmore">តាមបណ្ដាលខេត្តក្រុង</p>
             <p class="text-description"> - ខេត្តសៀមរាបអង្គរវត្ត​</p>
+            <!-- Bootstrap Slide View -->
+            <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ3.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ4.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+               <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ5.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+               <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ6.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <!-- End Bootstrap Slide View -->
             <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
             <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
             <p class="text-description"> - ប្រាសាទព្រះវិហារ (ខេត្តព្រះវិហារ)</p>
@@ -168,5 +200,6 @@
   </footer>
     <script src="dist/js/script.js"></script>
     <script src="dist/js/calendar.js"></script>
+    <script src="dist/js/bootstrap/bootstrap.bundle.min.js"></script>
   </body>
 </html>
