--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -108,11 +108,6 @@
                   <p class="text-title-readmore">កោះកុងក្រៅ</p>
                   <!-- Bootstrap Slide View -->
                   <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-                     <div class="carousel-indicators">
-                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                     </div>
                      <div class="carousel-inner">
                        <div class="carousel-item active">
                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ1.jpg" class="d-block w-100 img-content-post" alt="...">
@@ -123,6 +118,9 @@
                        <div class="carousel-item">
                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ3.jpg" class="d-block w-100 img-content-post" alt="...">
                        </div>
+                       <div class="carousel-item">
+                        <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ4.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -134,6 +132,105 @@
                      </button>
                    </div>
                    <!-- End Bootstrap Slide View -->
+                  <p class="text-title-readmore">កោះពស់</p>
+                  <img class="img-content-post" src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះពស់.jpg">
+                  <p class="text-title-readmore">កោះស្ដេច</p>
+                  <!-- Bootstrap Slide View -->
+                  <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                     <div class="carousel-inner">
+                       <div class="carousel-item active">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច1.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច2.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច3.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                        <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច4.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច5.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច6.jpg" class="d-block w-100 img-content-post" alt="...">
+                      </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
+                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="next">
+                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Next</span>
+                     </button>
+                   </div>
+                   <!-- End Bootstrap Slide View -->
+                   <p class="text-title-readmore">ឆ្នេរនេសាទ</p>
+                   <!-- Bootstrap Slide View -->
+                   <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ4.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ5.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                    <!-- End Bootstrap Slide View -->
+                    <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
+                    <!-- Bootstrap Slide View -->
+                    <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                       <div class="carousel-inner">
+                         <div class="carousel-item active">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត1.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត2.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត3.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត5.jpg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត6.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                       </div>
+                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Previous</span>
+                       </button>
+                       <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Next</span>
+                       </button>
+                     </div>
+                     <!-- End Bootstrap Slide View -->
+ 
                   <!-- Sub Title it will show Border, Big , and color red -->
                   <p class="text-title-readmore"></p>
                   <!-- Sub Title 1 will show border, Big , color back -->
@@ -143,13 +240,13 @@
                </div>
             </div>
             <!-- Side bar right of page -->
-            <div class="col-lg-3">
+            <!-- <div class="col-lg-3">
                <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
                <p class="side-bar-title">Kimnang</p>
                <p class="side-bar-readme">
                   This page power by me.
                </p>
-            </div>
+            </div> -->
          </div>
       </div>
       <footer>
