--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -230,6 +230,28 @@
                        </button>
                      </div>
                      <!-- End Bootstrap Slide View -->
+                     <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
+                    <!-- Bootstrap Slide View -->
+                    <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                       <div class="carousel-inner">
+                         <div class="carousel-item active">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                         <div class="carousel-item">
+                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                         </div>
+                       </div>
+                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Previous</span>
+                       </button>
+                       <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Next</span>
+                       </button>
+                     </div>
+                     <!-- End Bootstrap Slide View -->
+                     
  
                   <!-- Sub Title it will show Border, Big , and color red -->
                   <p class="text-title-readmore"></p>
