--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -91,7 +91,7 @@
       <div class="content-post container">
          <div class="row">
             <!--Display flix-->
-            <div class="col-lg-9">
+            <!-- <div class="col-lg-9"> -->
                <div class="description-1">
                   <div class="img-content-wrap">
                      <!-- Main Image of Post in Top -->
@@ -107,36 +107,52 @@
                   <p class="text-description">ខេត្តកោះកុង មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
                   <p class="text-title-readmore">កោះកុងក្រៅ</p>
                   <!-- Bootstrap Slide View -->
-                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-                     <div class="carousel-inner">
-                       <div class="carousel-item active">
-                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ1.jpg" class="d-block w-100 img-content-post" alt="...">
-                       </div>
-                       <div class="carousel-item">
-                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ2.jpg" class="d-block w-100 img-content-post" alt="...">
-                       </div>
-                       <div class="carousel-item">
-                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ3.jpg" class="d-block w-100 img-content-post" alt="...">
-                       </div>
-                       <div class="carousel-item">
-                        <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ4.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <div class="img-content-post">
+                      <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                          <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                          <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                          <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ3.jpg" class="d-block w-100 img-content-post" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ4.jpg" class="d-block w-100 img-content-post" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
                       </div>
-                     </div>
-                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
-                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                       <span class="visually-hidden">Previous</span>
-                     </button>
-                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
-                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                       <span class="visually-hidden">Next</span>
-                     </button>
-                   </div>
-                   <!-- End Bootstrap Slide View -->
+                      <!-- End Bootstrap Slide View -->
+                  </div>
                   <p class="text-title-readmore">កោះពស់</p>
                   <img class="img-content-post" src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះពស់.jpg">
                   <p class="text-title-readmore">កោះស្ដេច</p>
                   <!-- Bootstrap Slide View -->
                   <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                      <li data-target="#carouselIndicators1" data-bs-slide-to="5" aria-label="Slide 6"></li>
+                    </ol>
                      <div class="carousel-inner">
                        <div class="carousel-item active">
                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះស្តេច1.jpg" class="d-block w-100 img-content-post" alt="...">
@@ -170,6 +186,13 @@
                    <p class="text-title-readmore">ឆ្នេរនេសាទ</p>
                    <!-- Bootstrap Slide View -->
                    <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                      <li data-target="#carouselIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      <li data-target="#carouselIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                      <li data-target="#carouselIndicators2" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                      <li data-target="#carouselIndicators2" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                    </ol>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                           <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ1.jpg" class="d-block w-100 img-content-post" alt="...">
@@ -200,6 +223,14 @@
                     <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
                     <!-- Bootstrap Slide View -->
                     <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                        <li data-target="#carouselIndicators3" data-bs-slide-to="5" aria-label="Slide 6"></li>
+                      </ol>
                        <div class="carousel-inner">
                          <div class="carousel-item active">
                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ជីផាត1.jpg" class="d-block w-100 img-content-post" alt="...">
@@ -232,7 +263,11 @@
                      <!-- End Bootstrap Slide View -->
                      <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
                     <!-- Bootstrap Slide View -->
-                    <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+                    <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                      </ol>
                        <div class="carousel-inner">
                          <div class="carousel-item active">
                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ1.jpg" class="d-block w-100 img-content-post" alt="...">
@@ -241,11 +276,11 @@
                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ2.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                        </div>
-                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                          <span class="visually-hidden">Previous</span>
                        </button>
-                       <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                       <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="next">
                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
                          <span class="visually-hidden">Next</span>
                        </button>
@@ -260,7 +295,7 @@
                   <!-- Image post in Discription -->
                   <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
                </div>
-            </div>
+            <!-- </div> -->
             <!-- Side bar right of page -->
             <!-- <div class="col-lg-3">
                <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
