--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -91,30 +91,25 @@
             <p class="text-description-header">ខេត្តសៀមរាបជាតំបន់ដែលមានប្រាសាទបុរាណ្យជាច្រើន​ សម្រាប់ភ្ញៀវជាតិ និងអន្តរជាតិមកសិក្សារស្រាវជ្រាវអំពីប្រាសាទបុរាណ្យដ៏អស្ចារ្យមួយនេះ។ មិនត្រឺមតែប៉ុណ្ណោះទេតែទាំងមានប្រាសាទជាច្រើនផ្សេងៗទៀតសម្រាប់ការសិក្សារស្រាវជ្រាវ។</p>
             <p class="text-description">ខេត្តសៀមរាបមានទីកន្លែងកំសាន្ដជាច្រើនដូចជា៖</p>
             <p class="text-description">-កាហ្វេ វប្បធម៌ <br> - Angkor Balloon <br> -ប្រាសាទអង្គរវត្ត <br> -ប្រាសាទបាគង <br> -រមនីយ៍ដ្ឋានជាច្រើន <br> -និងប្រាសាទជាច្រើន... ។ </p>
-            <p class="text-title-readmore">តាមបណ្ដាលខេត្តក្រុង</p>
-            <p class="text-description"> - ខេត្តសៀមរាបអង្គរវត្ត​</p>
+            <p class="text-title-readmore">ទីកន្លែងកំសាន្ដ</p>
+            <p class="text-description"> កាហ្វេ វប្បធម៌​</p>
             <!-- Bootstrap Slide View -->
             <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌1.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌2.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ3.jpg" class="d-block w-100 img-content-post" alt="...">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌3.jpg" class="d-block w-100 img-content-post" alt="...">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ4.jpg" class="d-block w-100 img-content-post" alt="...">
-               </div>
-               <div class="carousel-item">
-                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ5.jpg" class="d-block w-100 img-content-post" alt="...">
-               </div>
-               <div class="carousel-item">
-                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ឆ្នេរនេសាទ6.jpg" class="d-block w-100 img-content-post" alt="...">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
+              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -125,26 +120,95 @@
               </button>
             </div>
             <!-- End Bootstrap Slide View -->
-            <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
-            <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
-            <p class="text-description"> - ប្រាសាទព្រះវិហារ (ខេត្តព្រះវិហារ)</p>
-            <img class="img-content-post" src="./images/ប្រាសាទព្រះវិហារ.jpeg">
-            <p class="text-description">ប្រាសាទព្រះវិហារ មានទីតាំងស្ថិតនៅលើជួរភ្នំដងរ៉ែក ជាប់ព្រំប្រទល់ប្រទេសថៃ និងមានចម្ងាយ​ ១០៨ ម៉ែត្រពីទីរួមខេត្តព្រះវិហារ​ ក្នុងភូមិ ស្វាយជ្រុំ ឃុំកន្ទូត ស្រុកជាំក្សាន្ត ខេត្តព្រះវិហារ។</p>
-            <p class="text-description"> - កំពង់សោម(ខេត្តព្រះសីហនុ)</p>
-            <img class="img-content-post" src="./images/កំពង់សោម.jpeg">
-            <p class="text-description">កំពង់សោម ជាកន្លែងសម្រាកលំហែកាយ និងកម្សាន្តដ៏មានប្រជាប្រិយភាពរបស់កម្ពុជាទាំងភ្ញៀវជាតិនិង អន្តរជាតិ ដែលមានទេសភាពខៀវស្រងាត់ អមដោយកោះ តូចធំជាច្រើន នៅជាប់នឹង ផ្ទៃសមុទ្រពណ៌ខៀវដ៏ធំល្វឹងល្វើយ ។</p>
-            <img class="img-content-post" src="./images/តាតៃ.jpeg">
-            <p class="text-description"> - តាតៃ​(ខេត្ត​ កោះកុង)</p>
-            <p class="text-description">រមណីដ្ឋាន​ តាតៃ កំពុងតែមានភាពភាពពេញនិយមពីភ្ញៀវជាតិនឹង អន្តរជាតិ ទៅទស្សនាកម្សាន្តនៅក្នុងពេលសម្រាកកាយរបស់ពួកគេ។​ វាមិនត្រឹមតែបានផ្តល់នូវភាពរីករាយប់ុណ្ណោះទេ ហើយវាបានធ្វើឲភ្ញៀវទេសចរណ៍ជាប់ចិត្ត និង ចងចាំទុកក្នុងចិត្តមិនអាចបំភ្លេចបាន។</p>
-        </div>
+            <br>
+            <p class="text-description"> Angkor Balloon​</p>
+             <!-- Bootstrap Slide View -->
+             <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon1.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon2.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon3.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon4.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+              </div>
+              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <!-- End Bootstrap Slide View -->
+            <br>
+            <p class="text-description"> ប្រាសាទអង្គរវត្ត/p>
+             <!-- Bootstrap Slide View -->
+             <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត1.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត2.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត3.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+              </div>
+              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <!-- End Bootstrap Slide View -->
+            <br>
+            <p class="text-description"> ប្រាសាទបាគង្ត</p>
+             <!-- Bootstrap Slide View -->
+             <div id="carouselIndicators5" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង1.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង2.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង3.jpg" class="d-block w-100 img-content-post" alt="...">
+                </div>
+                <div class="carousel-item">
+                 <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង4.jpg" class="d-block w-100 img-content-post" alt="...">
+               </div>
+              </div>
+              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <!-- End Bootstrap Slide View -->
       </div>
-      <div class="col-lg-3">
-          <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
-        <p class="side-bar-title">Kimnang</p>
-        <p class="side-bar-readme">
-          This page power by me.
-        </p>
-      </div>
+     
     </div>
   </div>
   <footer>
