--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                 alt=""
               />
               <p class="place-decription">
-                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ ព្រែកស្វាយ សង្កាត់កោះរ៉ុង
-                ក្រុងព្រះ សីហនុ ខេត្តព្រះសីហនុ...
+                ទំនប់ស្ទឹងតាសាល ស្ថិតនៅភូមិអូរអញ្ចាញ ឃុំតាសាល ស្រុកឱរ៉ាល់
+                ខេត្តកំពង់ស្ពឺ «ទំនប់ស្ទឹងតាសាល» ...
               </p>
             </div>
             <div class="popular-place d-flex">
@@ -265,9 +265,11 @@
               <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
               <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
               <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
-                តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
-                ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+                ប្រាសាទអង្គរវត្ត
+                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
+                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
+                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
+                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
               </p>
             </div>
           </div>
@@ -283,9 +285,10 @@
               <p class="card-title text-center">ភ្នំបូកគោ</p>
               <p class="card-subtitle text-center">ខេត្តកំពត</p>
               <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
-                តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
-                ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
               </p>
             </div>
           </div>
@@ -301,9 +304,11 @@
               <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
               <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
               <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
-                តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
-                ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
               </p>
             </div>
           </div>
