--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -36,16 +36,31 @@
               ខេត្ត/តំបន់
               <div class="sub-menu-dropdown">
                 <ul>
-                  <li>សណ្ឋាគារ</li>
-                  <li>រថយន្ត</li>
-                  <li>រថយន្តក្រុង</li>
-                  <li>ជើងហោះហើរ</li>
-                  <li>អាហារ</li>
-                  <li>សណ្ឋាគារ</li>
-                  <li>រថយន្ត</li>
-                  <li>រថយន្តក្រុង</li>
-                  <li>ជើងហោះហើរ</li>
-                  <li>អាហារ</li>
+                  <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
+                  <a href="កំពត.html"><li>កំពត</li></a>
+                  <a href="កែប.html"><li>កែប</li></a>
+                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
+                  <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
+                  <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
+                  <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
+                  <a href="តាកែវ.html"><li>តាកែវ</li></a>
+                  <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
+                  <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
+                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
+                  <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
                 </ul>
               </div>
             </li>
@@ -109,7 +124,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/កាហ្វេ វប្បធម៌4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <p class="text-description">ផ្ទះ​កាហ្វេ​វប្បធម៌ បាន​តាំង​វត្ថុ​បង្ហាញ​ពី​វប្បធម៌ ក្នុង​គោលដៅ​រួមចំណែក​ផ្សព្វផ្សាយ​ពី​វប្បធម៌​ខ្មែរ​។ វត្ថុ​បុរាណ​ដែលមាន​ក្នុងផ្ទះ​កាហ្វេ​វប្បធម៌​នេះ មាន​អាយុកាល​ចាប់ពី​ជាង​១០០​ឆ្នាំ រហូតដល់​សម័យ​បច្ចុប្បន្ន​។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -138,7 +153,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/Angkor Balloon4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <p class="text-description">ប៉េងប៉ោង​អេលីយ៉ូម​ដែល​ចង​ភ្ជាប់​នៅ​ចម្ងាយ ៨០០ ម៉ែត្រ​ពី​ប្រាសាទ​អង្គរវត្ត។ ប៉េងប៉ោងអេលីយ៉ូមត្រូវបានភ្ជាប់ជាមួយនឹងខ្សែមេកានិចទៅនឹងដី ហើយឡើងដល់កម្ពស់ប្រហែល 120 ម៉ែត្រ (394 ហ្វីត) សម្រាប់ការជិះរយៈពេល 10 នាទី ហើយអាចផ្ទុកអ្នកដំណើរបានរហូតដល់ 20 នាក់។ ចាប់ពីថ្ងៃរះដល់ថ្ងៃលិច រីករាយនឹងទិដ្ឋភាពពីលើអាកាសដ៏អស្ចារ្យនៃប្រាសាទអង្គរវត្ត ភ្នំបាខែង និងបារាយណ៍ខាងលិច។ អ្នកក៏អាចមើលបឹងទន្លេសាប និងភ្នំក្រោមផងដែរ។ ថតរូបដ៏អស្ចារ្យ និងនាំយកការចងចាំមកផ្ទះដែលនៅស្ថិតស្ថេរអស់មួយជីវិត។​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -150,7 +165,7 @@
             </div>
             <!-- End Bootstrap Slide View -->
             <br>
-            <p class="text-description"> ប្រាសាទអង្គរវត្ត/p>
+            <p class="text-description"> ប្រាសាទអង្គរវត្ត</p>
              <!-- Bootstrap Slide View -->
              <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
@@ -167,7 +182,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទអង្គរវត្ត3.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <p class="text-description">ប្រាសាទអង្គរវត្ត ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។ ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។ ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២ ដែលជាស្នាដៃដ៏ធំអស្ចារ្យ និងមានឈ្មោះល្បីល្បាញរន្ទឺសុះសាយទៅគ្រប់ទិសទីលើពិភពលោក។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -196,7 +211,7 @@
                  <img src="images/Cambodia/កន្លែងកំសាន្ដ/សៀមរាប/ប្រាសាទបាគង4.jpg" class="d-block w-100 img-content-post" alt="...">
                </div>
               </div>
-              <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+              <p class="text-description">ប្រាសាទបាគងគឺជាឈ្មោះថ្មី ដែលត្រូវបានហៅនៅសម័យកណ្តាល។ ប្រាសាទនេះផ្សំពីពាក្យ ប្រាសាទ+បា+គង។ ប្រាសាទ មានន័យថាទីកន្លែងអាទិទេពគង់នៅ។ បា មានន័យ ថាអ្នកគ្រប់គ្រងលោក អ្នកថែរក្សាលោក។ រីឯពាក្យ គង មានន័យថាគឺជាវត្ថុសម្រាប់បន្លឺសម្លេងឱ្យលាន់លឺរំពងខ្លាំង ហើយត្រូវបានអ្នកមានជំនឿលើអាទិទេព ប្រើប្រាស់ដើម្បីបង្កើតជាសូរសម្លេងដាស់លាន់លឺដល់ពួកអាទិទេពទាំងអស់។ តាមសិលាចារឹកនៃប្រាសាទនេះមានឈ្មោះដើមថា ឥន្ទ្រេស្វរៈ[២]។ ​</p>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
