--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -140,8 +140,10 @@
                       </div>
                       <!-- End Bootstrap Slide View -->
                   </div>
+                  <p class="text-description">កោះកុងក្រៅស្ថិតក្នុង ឃុំជ្រោយប្រស់ ស្រុកកោះកុង ខេត្តកោះកុង ដែលមានចម្ងាយប្រមាណ ៣០ គ.ម ពីក្រុងខេមរភូមិន្ទ។ តំបន់នេះ មានសក្តានុពលផ្នែកធនធានធម្មជាតិ ជីវៈចម្រុះ និងមានឆ្នេរខ្សាច់ល្អស្រស់ស្អាត ស្ថិតនៅលើផ្ទៃទឹកសមុទ្រដ៏ធំល្វឹងល្វើយ ដែលមានពណ៌ខៀវស្រងាត់។</p>
                   <p class="text-title-readmore">កោះពស់</p>
                   <img class="img-content-post" src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះពស់.jpg">
+                  <P class="text-description">កោះពស់ ស្ថិតនៅក្នុងប្រភេទរមណីយដ្ឋាន កោះ និងឆ្នេរសមុទ្យ។ សម្រាប់ចំណុចសំខាន់ៗ ក៏ដូចជាភាពទាក់ទាញនៃរមណីយដ្ឋានកោះពស់ដែលអាចធ្វើអោយភ្ញៀវទេសចរមានចំណាំអារម្មណ៏នោះ មានដូចជា៖ លេងទឹកឬហែលទឹក, គយគន់ថ្ងៃលិច, ជិះទូក, ឆ្នេរសមុទ្រ និងចំណុចផ្សេងៗទៀត។កោះពស់ ជាកោះមួយនៅដាច់ពីឆ្នេរសមុទ្រដទៃទៀត អ្នកទេសចរទៅលេងតំបន់នោះ ភាគច្រើនជាក្រុមភ្ញៀវដែលវិចខ្ចប់ម្ហូបអាហារទៅជាមួយផង។</P>
                   <p class="text-title-readmore">កោះស្ដេច</p>
                   <!-- Bootstrap Slide View -->
                   <div id="carouselIndicators1" class="carousel slide" data-ride="carousel">
@@ -183,6 +185,7 @@
                      </button>
                    </div>
                    <!-- End Bootstrap Slide View -->
+                   <P class="text-description">កោះ​ស្ដេច​ គឺជា កោះ​ធម្មជាតិ​មួយ ឋិត​នៅ​ក្នុង​​ភូមិ កោះស្តេច ឃុំកោះស្ដេច ស្រុក​គីរីសាគរ ដែល​លាត​សន្ធឹង​តាម​បណ្ដោយ​សមុទ្រ​មាន​​ចម្ងាយ​ប្រមាណ​ជាង ៨១ គីឡូម៉ែត្រ ពី​ទីរួម​ខេត្ត​កោះកុង។ កោះ​ស្ដេច​ មាន​ចំងាយ​ប្រមាណ​ជា ២៥០ គីឡូម៉ែត្រ​ពី​រាជធានី​ភ្នំពេញ ដោយ​ត្រូវ​ធ្វើ​ដំណើរ​​ជា​ពីរ​ដំណាក់​កាល​ គឺ​ផ្លូវ​គោក និង ​ផ្លូវ​ទឹក​ ដោយ​ជិះ​អូប័រ​ (ទូក​តូច​ដែល​មាន​ល្បឿន​លឿន)។ រមណីយដ្ឋាន​កោះស្ដេច មាន​ឆ្នេរ​ខ្សាច់ស​​ស្អាត មាន​ផ្ទះ​សំណាក់​ និង ទេសភាព​ស្រស់​ស្អាត​សម្រាប់​លំហែលំហើយ​ ព្រោះ​មាន​កោះ​ជាច្រើន​នៅ​ជុំ​វិញ និង ព្រៃ​ធម្មជាតិ។</P>
                    <p class="text-title-readmore">ឆ្នេរនេសាទ</p>
                    <!-- Bootstrap Slide View -->
                    <div id="carouselIndicators2" class="carousel slide" data-ride="carousel">
@@ -220,6 +223,8 @@
                       </button>
                     </div>
                     <!-- End Bootstrap Slide View -->
+                    <P class="text-description">ឆ្នេរនេសាទ មានទឹកសមុទ្រខៀវស្រងាត់ ឆ្នេរខ្សាច់សក្បុស ក្រោមម្លប់ដើមដូងត្រជាក់
+                    </br>  ជាទីកន្លែងស្រូបយកខ្យល់អាកាស និងមុជទឹកកម្សាន្តរីករាយ ដែលមានទីតាំងស្ថិត ក្នុងភូមិនេសាទ ឃុំជ្រោយស្វាយ ស្រុកស្រែអំបិល មានចម្ងាយប្រហែល ២៥ គីឡូម៉ែត្រ (គ្រួសក្រហម) ពីចំណុចផ្លូវបំបែកស្រែអំបិល ពីក្រុងខេមរភូមិន្ទ ប្រហែល ១៦៥ គីឡូម៉ែត្រ និងប្រហែល ១៧០គ.ម ពីរាជធានីភ្នំពេញ។</P>
                     <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
                     <!-- Bootstrap Slide View -->
                     <div id="carouselIndicators3" class="carousel slide" data-ride="carousel">
@@ -260,13 +265,19 @@
                          <span class="visually-hidden">Next</span>
                        </button>
                      </div>
+                     <p class="text-description">អូរស្ប័ត ជាទឹកធ្លាក់ធម្មជាតិស្ថិតក្នុងតំបន់ជីផាត ដើម្បីទៅកាន់ទីនោះ លោកអ្នកត្រូវធ្វើដំណើរឆ្លងកាន់សហគមន៍អេកូទេសចរណ៍ជីផាត ដែលមានចម្ងាយប្រហែល ១២៥គីឡូម៉ែត្រ ពីក្រុងខេមរភូមិន្ទ និងប្រហែល ២១០គីឡូម៉ែត្រ ពីរាជធានីភ្នំពេញ ធ្វើដំណើរតាមផ្លូវជាតិលេខ៤ និង៤៨ (ផ្លូវគ្រួសក្រហម ១៧គីឡូម៉ែត្រ)</p>
                      <!-- End Bootstrap Slide View -->
-                     <p class="text-title-readmore">ទឹកធ្លាក់ជីផាត</p>
+                     <p class="text-title-readmore">ទឹកធ្លាក់តាតៃ</p>
                     <!-- Bootstrap Slide View -->
                     <div id="carouselIndicators4" class="carousel slide" data-ride="carousel">
                       <ol class="carousel-indicators">
                         <li data-target="#carouselIndicators4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
                         <li data-target="#carouselIndicators4" data-bs-slide-to="1" aria-label="Slide 2"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="2" aria-label="Slide 3"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="3" aria-label="Slide 4"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="4" aria-label="Slide 5"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="5" aria-label="Slide 6"></li>
+                        <li data-target="#carouselIndicators4" data-bs-slide-to="6" aria-label="Slide 7"></li>
                       </ol>
                        <div class="carousel-inner">
                          <div class="carousel-item active">
@@ -275,6 +286,21 @@
                          <div class="carousel-item">
                            <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ2.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
+                         <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ5.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ6.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/ទឹកធ្លាក់តាតៃ7.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        </div>
                        </div>
                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators4" data-bs-slide="prev">
                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -286,14 +312,11 @@
                        </button>
                      </div>
                      <!-- End Bootstrap Slide View -->
-                     
- 
-                  <!-- Sub Title it will show Border, Big , and color red -->
-                  <p class="text-title-readmore"></p>
-                  <!-- Sub Title 1 will show border, Big , color back -->
-                  <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                  <!-- Image post in Discription -->
-                  <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+                     <p class="text-description">ទឹកធ្លាក់តាឥសី ឬទឹកធ្លាក់តាតៃ មានទីតាំងស្ថិតក្នុងភូមិ អន្លង់វ៉ាក់ ឃុំតាតៃក្រោម ស្រុកកោះកុង ខេត្តកោះកុង ដែលមានចម្ងាយប្រមាណ ១៧ គ.ម ពីក្រុងខេមរភូមិន្ទ។ ភ្ញៀវទេសចរជាតិអន្តរ ជាតិទាំងអស់ អាចទៅទស្សនាកំសាន្តនៅតំបន់នោះបានដោយតាមផ្លូវគោក (រថយន្ត ម៉ូតូ ឬកង់) តាមផ្លូវជាតិ លេខ ៤៨ រួចបន្តតាមផ្លូវលំ ក្រួសក្រហម ឬ អាចធ្វើដំណើរតាមផ្លូវទឹកត្រឹមសហគមន៍ ដែលមានទីតាំងនៅក្បែរគល់ ស្ពានតាតៃដោយចុះទូករបស់សហគមន៍ទៅកាន់តំបន់ទឹកធ្លាក់នេះ ។</p>
+                     <!-- Back to top button -->
+                    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+                      <i class="fas fa-arrow-up"></i>
+                    </button>
                </div>
             <!-- </div> -->
             <!-- Side bar right of page -->
