update main page

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
             <img
               src="images/Cambodia/angkorwat1.jpg"
               class="card-img-top"
+              height="310.5px"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
