--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li>រថយន្ត</li>
             <li>រថយន្តក្រុង</li>
             <li>ជើងហោះហើរ</li>
-            <li>អាហារ</li>
+            <a href="#food-footer"><li>អាហារ</li></a>
           </ul>
         </div>
         <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia" />
@@ -101,7 +101,7 @@
             />
           </div>
           <a href="" class="about-us">អំពីយើង</a>
-          <a href="" class="contact-us">ទំនាក់ទំនង់</a>
+          <a href="#contact-footer" class="contact-us">ទំនាក់ទំនង់</a>
           <!-- Theme mode Dark/Light -->
           <input type="checkbox" name="theme-mode" id="theme-mode" />
           <label for="theme-mode"> </label>
@@ -320,7 +320,7 @@
       <div
         class="header-title d-flex justify-content-between align-items-center w-100 mt-4"
       >
-        <p class="left-title">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
+        <p class="left-title" id="food-footer">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
         <label class="right-show-more"> មើលបន្ថែម </label>
       </div>
       <div class="list-foods row mt-4">
@@ -344,7 +344,7 @@
           <img src="images/food/អាម៉ុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">អាម៉ុក</p>
         </div>
-        <div class="food col-12 col-md-4 col-lg-3">
+        <div class="food col-12 col-md-4 col-lg-3" >
           <p class="food-in-province m-0 text-end">៥</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
@@ -377,7 +377,7 @@
             alt="banner"
             class="footer-banner"
           />
-          <span class="title-content travel">Travel</span>
+          <span class="title-content travel" id="contact-footer">Travel</span>
         </div>
         <div class="footer-detail row p-5">
           <div
