--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         class="header-title d-flex justify-content-between align-items-center w-100 mt-4"
       >
         <p class="left-title" id="food-footer">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
-        <label class="right-show-more"> មើលបន្ថែម </label>
+        <a href="foot-more.html"><label class="right-show-more"> មើលបន្ថែម </label></a>
       </div>
       <div class="list-foods row mt-4">
         <div class="food col-12 col-md-4 col-lg-3">
