--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
       <span class="scroll_span"></span>
       <p>scroll down</p>
     </div>
+    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <div class="travel-guide-container">
       <div class="row">
         <div class="col-7 pe-5">
@@ -160,10 +163,10 @@
           </div>
           <div class="area d-flex">
             <div class="col-">
-              <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="" />
+              <img src="images/Cambodia/កោះកុង.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title" href="កំពង់ឆ្នាំង.html">កំពង់ឆ្នាំង</a>
+                <a class="area-title" href="កោះកុង.html">កោះកុង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
