--- a/foot-more.html
+++ b/foot-more.html
@@ -157,102 +157,102 @@
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3" >
-          <p class="food-in-province m-0 text-end">៥</p>
-          <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
+          <p class="food-in-province m-0 text-end">៩</p>
+          <img src="images/food/ នំអន្សម.jpeg" alt="" class="food-img" />
+          <p class="food-name m-0 text-center">នំអន្សម</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
-          <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
+          <p class="food-in-province m-0 text-end">១០</p>
+          <img src="images/food/ ម៉ាំឆៅ.jpeg" alt="" class="food-img" />
+          <p class="food-name m-0 text-center">ម៉ាំឆៅ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
-          <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">១១</p>
+          <img src="images/food/kreak.png" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
+          <p class="food-in-province m-0 text-end">១២</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3" >
-          <p class="food-in-province m-0 text-end">៥</p>
+          <p class="food-in-province m-0 text-end">១៣</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
+          <p class="food-in-province m-0 text-end">១៤</p>
           <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
+          <p class="food-in-province m-0 text-end">១៥</p>
           <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
+          <p class="food-in-province m-0 text-end">១៦</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3" >
-          <p class="food-in-province m-0 text-end">៥</p>
+          <p class="food-in-province m-0 text-end">១៧</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
+          <p class="food-in-province m-0 text-end">១៨</p>
           <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
+          <p class="food-in-province m-0 text-end">១៩</p>
           <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
+          <p class="food-in-province m-0 text-end">២០</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3" >
-          <p class="food-in-province m-0 text-end">៥</p>
+          <p class="food-in-province m-0 text-end">២១</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
+          <p class="food-in-province m-0 text-end">២២</p>
           <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
+          <p class="food-in-province m-0 text-end">២៣</p>
           <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
+          <p class="food-in-province m-0 text-end">២៤</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3" >
-          <p class="food-in-province m-0 text-end">៥</p>
+          <p class="food-in-province m-0 text-end">២៥</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
+          <p class="food-in-province m-0 text-end">២៦</p>
           <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
+          <p class="food-in-province m-0 text-end">២៧</p>
           <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
+          <p class="food-in-province m-0 text-end">២៨</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
