--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
       <div
         class="header-title d-flex justify-content-between align-items-center w-100 mt-4"
       >
-        <p class="left-title" id="food-footer">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
+        <p class="left-title" id="food-footer">
+          មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង
+        </p>
         <label class="right-show-more"> មើលបន្ថែម </label>
       </div>
       <div class="list-foods row mt-4">
@@ -344,7 +346,7 @@
           <img src="images/food/អាម៉ុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">អាម៉ុក</p>
         </div>
-        <div class="food col-12 col-md-4 col-lg-3" >
+        <div class="food col-12 col-md-4 col-lg-3">
           <p class="food-in-province m-0 text-end">៥</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
