--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
               </div>
             </li>
-            <li>សណ្ឋាគារ</li>
+            <a href="សណ្ឋាគារ.html"><li>សណ្ឋាគារ</li></a>
             <li>រថយន្ត</li>
             <li>រថយន្តក្រុង</li>
             <li>ជើងហោះហើរ</li>
