--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -116,9 +116,11 @@
       <i class="fas fa-arrow-up"></i>
     </button>
     <div class="top-3-place container">
-      <p class="top-3-place-title text-center my-5 hotel-head">
+      <p class="hotel-head-title text-center">
         <span class="txt-top-place-title">សណ្ឋាគារ</span>
       </p>
+      <p class="fa fa-caret-up"></p>
+      <p class="hotel-head"></p>
       <div class="row">
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
