--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -119,8 +119,9 @@
       <p class="hotel-head-title text-center">
         <span class="txt-top-place-title">សណ្ឋាគារ</span>
       </p>
-      <p class="fa fa-caret-up"></p>
-      <p class="hotel-head"></p>
+      <div class="under-line-triangle">
+        <div class="line-triangle"></div>
+      </div>
       <div class="row">
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
