--- a/flight.html
+++ b/flight.html
@@ -96,38 +96,40 @@
         </div>
     </nav>
 
-    <div class="page-title text-center">
-        <p style="color: #CE3E3A;">ជើងហោះហើរ</p>
-    </div>
-    <div class="under-line-triangle">
-        <div class="line-triangle"></div>
-    </div>
-
-    <div class="schedule-wrapper">
-        <div class="fight-schedule">
-            <div class="schedule-source"> សៀមរាប </div>
+    <div class="container">
+        <div class="page-title text-center">
+            <p style="color: #CE3E3A;">ជើងហោះហើរ</p>
         </div>
-        <div class="schedule-table">
-            <table>
-                <thead>
-                    <tr> 
-                        <td> ទីតាំងចេញដំណើរ </td>
-                        <td> គោលដៅ </td>
-                        <td> ប្រេកង់ហោះហើរ </td>
-                        <td> រយៈពេលហោះហើរ </td>
-                        <td> យន្តហោះ </td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> សៀមរាប </td>
-                        <td> ភ្នំពេញ </td>
-                        <td> រាល់ថ្ងៃ </td>
-                        <td> ៣០នាទី - ៤៥នាទី </td>
-                        <td> A321/ATR72 </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="under-line-triangle">
+            <div class="line-triangle"></div>
+        </div>
+    
+        <div class="schedule-wrapper">
+            <div class="fight-schedule">
+                <div class="schedule-source"> សៀមរាប </div>
+            </div>
+            <div class="schedule-table d-flex justify-content-center px-5">
+                <table class="table table-light table-hover">
+                    <thead>
+                        <tr> 
+                            <td> ទីតាំងចេញដំណើរ </td>
+                            <td> គោលដៅ </td>
+                            <td> ប្រេកង់ហោះហើរ </td>
+                            <td> រយៈពេលហោះហើរ </td>
+                            <td> យន្តហោះ </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> សៀមរាប </td>
+                            <td> ភ្នំពេញ </td>
+                            <td> រាល់ថ្ងៃ </td>
+                            <td> ៣០នាទី - ៤៥នាទី </td>
+                            <td> A321/ATR72 </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </body>
